Fixed multiple alignment issues

--- a/src/Styles/abstract/_variables.scss
+++ b/src/Styles/abstract/_variables.scss
@@ -21,4 +21,7 @@
   --color-error-red: #e23636;
 
   --color-black: #000;
+
+  --max-page-width: 220rem;
+  --max-page-width-unlogged: 150rem;
 }
