--- a/src/app/authPages/sign-in-page/sign-in-page.component.scss
+++ b/src/app/authPages/sign-in-page/sign-in-page.component.scss
@@ -5,6 +5,7 @@
   background-color: var(--color-white);
   padding-bottom: 3rem;
   margin: 9rem 0 4rem;
+  max-width: 55rem;
 
   .heading-secondary {
     padding: 3rem 0 2rem;
