--- a/src/app/authPages/sign-up-page/sign-up-page.component.scss
+++ b/src/app/authPages/sign-up-page/sign-up-page.component.scss
@@ -5,6 +5,7 @@
   font-size: 1.6rem;
   background-color: var(--color-white);
   margin: 9rem 0 4rem;
+  max-width: 60rem;
 
   .heading-secondary {
     padding-top: 2.5rem;
