--- a/src/app/navigation/navigation-sidebar/navigation-sidebar.component.scss
+++ b/src/app/navigation/navigation-sidebar/navigation-sidebar.component.scss
@@ -7,8 +7,8 @@
   background-color: var(--color-white);
   font-size: 1.6rem;
   letter-spacing: 0.1rem;
-  box-shadow: 0 0 0.3rem 0 rgba(0, 0, 0, 0.2);
-  max-width: 25rem;
+  box-shadow: 2px 0 3px -2px rgba(0, 0, 0, 0.2);
+  max-width: 35rem;
 
   &__community {
     padding: 8rem 2rem 2rem 2rem;
@@ -68,7 +68,7 @@
   justify-content: center;
   position: relative;
   text-decoration: none;
-  width: 14rem;
+  min-width: 14rem;
 
   &:hover {
     color: var(--color-primary);
