--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -9,7 +9,7 @@
   box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.2);
 
   &-within {
-    max-width: 150rem;
+    max-width: var(--max-page-width);
     margin: auto;
   }
 
